--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.24.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
