--- a/package.json
+++ b/package.json
@@ -7,21 +7,39 @@
     "compile": "yarn tsc -w"
   },
   "dependencies": {
+    "axios": "^1.1.2",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.32.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "http-errors": "^2.0.0",
+    "joi": "^17.6.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.24.0"
+    "sequelize": "^6.24.0",
+    "sqlite3": "^5.1.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
+    "@types/debug": "^4.1.7",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
     "@types/http-errors": "^1.8.2",
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.8.2",
+    "@types/nodemailer": "^6.4.6",
+    "@types/uuid": "^8.3.4",
     "typescript": "^4.8.4"
   }
 }
